test spacing fix

--- a/sass/email/01_atom/_a-newsletter-ad.scss
+++ b/sass/email/01_atom/_a-newsletter-ad.scss
@@ -1,10 +1,5 @@
 .a-newsletter-ad {
-
-    .item-contents {
-        border-bottom: $border-default-style;
-
-        img {
-            display: inline-block;
-        }
+    img {
+        display: inline-block;
     }
 }
