--- a/sass/email/02_molecule/_m-newsletter-ad-region.scss
+++ b/sass/email/02_molecule/_m-newsletter-ad-region.scss
@@ -1,5 +1,11 @@
-.m-newsletter-ad-region {
+table.m-newsletter-ad-region {
+    
     margin-bottom: $standard-block-margin;
+    border-bottom: $border-default-style;
+
+    .item-contents {
+        text-align: center;
+    }
     
     @include column( $selector: '.a-newsletter-ad', $max-width: 100%, $text-align: center, $padding: 0 0 $standard-block-margin 0, $mobile-padding-only: 'false');
 }
