--- a/sass/email/03_organism/_o-columns.scss
+++ b/sass/email/03_organism/_o-columns.scss
@@ -4,5 +4,5 @@
     background-color: neutral-color(white);
     color: neutral-color(black);
 
-    @include column( $selector: '.o-column', $max-width: 50%);
+    @include column( $selector: '.o-column', $max-width: 50%, $desktop-padding-only: 'false', $mobile-padding-only: 'false');
 }
